--- a/client/src/pages/Dashboard/Dashboard.module.scss
+++ b/client/src/pages/Dashboard/Dashboard.module.scss
@@ -1,4 +1,13 @@
+@import "../../styles/Variables.scss";
+@import "../../styles/Mixin.scss";
+
+
 
 .teamInfo{
     text-align: center;
+}
+
+.createPlayerInput{
+    @include inputFieldDesign();
+
 }
